Mon Feb  5 17:21:52 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix a missing #include in socketcommon.h

Mon Feb  5 17:15:46 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Sort generated todo lists.

Fri Feb  2 17:44:54 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Add an OmDocument::add_term() method.

	* Remove an unwanted check that wdf's are greater than 0: wdf of 0
	  _is_ allowed.

Fri Feb  2 15:04:08 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Hopefully, a fix for segfaults/assertions when network errors
	  happen halfway through a match, when handled by OmErrorHandler
	  objects: give the place-holder EmptyTermLists weighting objects.

Thu Feb  1 19:03:10 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fixes to OmDocument interface: add parameters specifying the
	  changes to be made to the wdf to add_posting and remove_posting,
	  properly implement remove_posting and remove_term, including
	  throwing of exceptions, and add a set_wdf() method to set the wdf
	  to an absolute value.  Corresponding modifications to
	  OmDocumentTerm.

	* Fix commented out errorhandler code in multimatch.cc, so it still
	  compiles.

	* Add a check to avoid division by zero in bm25weight.cc

Thu Feb  1 15:59:30 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a missed #include to omqueryinternal.h

Thu Feb  1 14:44:04 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Add some error handler code, with a "#if 0"ed out comment,
	  to multimatch.cc

Wed Jan 31 15:45:16 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Remote servers should close down more gracefully when the
	  client closes down in the middle of a request.

Tue Jan 30 16:52:05 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Removed unneeded #includes of STL headers from API headers.

	* All #includes of files which are not installed use "" rather than